--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	margin:0;
 	padding:0;
 	border:0;
-	font-family: 'agency fb';
+	font-family:'lato', 'agency fb';
 	box-sizing: border-box;
 	outline: none;
 	text-decoration: none;
